[options]
install_requires =
    pathtools >= 0.1.1
    pyobjc-framework-Cocoa >= 4.2.2 ; sys_platform == "darwin"
    pyobjc-framework-FSEvents >= 4.2.2 ; sys_platform == "darwin"

[options.extras_require]
watchmedo =
    PyYAML >= 3.10
    argh >= 0.24.1

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120

[upload_sphinx]
# Requires sphinx-pypi-upload to work.
upload-dir = docs/build/html

[tool:pytest]
addopts =
    --showlocals
    -v
    --cov=watchdog
    --cov-report=term-missing
