[metadata]
project_urls =
    Documentation=https://python-watchdog.readthedocs.io/en/stable/
    Source=https://github.com/gorakhargosh/watchdog/
    Issues=https://github.com/gorakhargosh/watchdog/issues
    Changelog=https://github.com/gorakhargosh/watchdog/blob/master/changelog.rst

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
# Requires sphinx-pypi-upload to work.
upload-dir = docs/build/html
